--- a/term07/05-Universal Dependencies/hw05.ipynb
+++ b/term07/05-Universal Dependencies/hw05.ipynb
@@ -29,12 +29,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "15e30172-4afa-4bba-8477-afb1599d9aed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import os\n",
+    "from nltk.tokenize import sent_tokenize\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "\n",
+    "path = os.path.abspath(os.path.join('..', '..', 'term06', 'BASE', '05-Matplotlib', 'three_comrades.txt'))\n",
+    "with open(path, 'r', encoding='ANSI') as file:\n",
+    "    raw1 = file.read()\n",
+    "with open('three_comrades_deutsch.txt', 'r', encoding='utf8') as file2:\n",
+    "    raw2 = file2.read()\n",
+    "# sentenizer\n",
+    "sent1 = sent_tokenize(raw1)\n",
+    "sent2 = sent_tokenize(raw2)\n",
+    "# tokenizer\n",
+    "tokenizer = RegexpTokenizer(r'\\w+|\\$[\\d\\.]+')\n",
+    "# len(sentences) \n",
+    "len1, len2 = len(sent1), len(sent2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6bf6f5bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#средняя длина предложения\n",
+    "def med_len(senten):\n",
+    "    tokens = list()\n",
+    "    tot_len = 0\n",
+    "    for sent in senten:\n",
+    "        raw = tokenizer.tokenize(sent)\n",
+    "        tokens.extend(raw)\n",
+    "        tot_len += len(raw)\n",
+    "    med = round(tot_len / len(senten), 2)\n",
+    "    return med, tokens\n",
+    "\n",
+    "\n",
+    "def lex_diversity(tokens):\n",
+    "    return round(len(set(tokens)) / len(tokens) * 100, 3)\n",
+    "\n",
+    "\n",
+    "med_len1, tokens1 = med_len(sent1)\n",
+    "med_len2, tokens2 = med_len(sent2)\n",
+    "# len(tokens)\n",
+    "tlen1, tlen2 = len(tokens1), len(tokens2)\n",
+    "#лексическое разнообразие\n",
+    "lex_div_ru = lex_diversity(tokens1)\n",
+    "lex_div_de = lex_diversity(tokens2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d81f88d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Текст на русском. Кол-во предложений:15001.\n",
+      "Текст на немецком. Кол-во предложений:9525.\n",
+      "\n",
+      "Текст на русском. Кол-во слов:114540.\n",
+      "Текст на немецком. Кол-во слов:127836.\n",
+      "\n",
+      "Текст на русском. Средняя длина предложения: 7.64.\n",
+      "Текст на русском. Средняя длина предложения:13.42.\n",
+      "\n",
+      "Текст на русском. Лексическое разнообразие: 19.852.\n",
+      "Текст на немецком. Лексическое разнообразие: 10.847\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Текст на русском. Кол-во предложений:{len1}.\\nТекст на немецком. Кол-во предложений:{len2}.\\n')\n",
+    "print(f'Текст на русском. Кол-во слов:{tlen1}.\\nТекст на немецком. Кол-во слов:{tlen2}.\\n')\n",
+    "print(f'Текст на русском. Средняя длина предложения: {med_len1}.\\nТекст на русском. Средняя длина предложения:{med_len2}.\\n')\n",
+    "print(f'Текст на русском. Лексическое разнообразие: {lex_div_ru}.\\nТекст на немецком. Лексическое разнообразие: {lex_div_de}\\n')"
    ]
   },
   {
@@ -54,7 +133,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load('ru_core_news_sm')\n",
+    "doc_ru = nlp(raw1)\n",
+    "for token in doc_ru:\n",
+    "    t\n",
+    "# лемма - словоформа - часть речи\n",
+    "# сравнить - словарь (ключ - часть речи)\n",
+    "# пандас\n",
+    "#\n",
+    "# "
    ]
   },
   {
@@ -100,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
